syntax = "proto3";
package lumera.claim;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "cosmos/msg/v1/msg.proto";

option go_package = "github.com/LumeraProtocol/lumera/x/claim/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.equal) = true;

  bool enable_claims = 1 [
    (gogoproto.jsontag) = "enable_claims"
  ];
  
  int64 claim_end_time = 3 ;
  
  uint64 max_claims_per_block = 4 [
    (gogoproto.jsontag) = "max_claims_per_block"
  ];
}